# stanza_delle_necessita

./: .gitignore  README.md
backend/: 09-2024.csv  Cargo.toml
backend/src/: main.rs  models.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Leaderboard.tsx  Login.tsx  RoomStatus.tsx
