[package]
name = "stanza_dele_necessita_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7.0"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
csv = "1.1"
# winapi = { version = "0.3", features = ["consoleapi", "wincon"] }
